--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,6 +7,7 @@
 @import 'base/darkMode';
 
 /** UI **/
+
 @import 'layout/header';
 @import 'layout/footer';
 @import 'layout/navegacion';
@@ -17,6 +18,7 @@
 @import 'layout/testimoniales';
 @import 'layout/formularios';
 
-
 /** Paginas Internas **/
+
 @import 'internas/nosotros';
+@import 'internas/admin';
