--- a/src/scss/base/_utilidades.scss
+++ b/src/scss/base/_utilidades.scss
@@ -2,6 +2,7 @@
     margin-top: calc($separacion / 2) 0;
     margin-bottom: calc($separacion / 2) 0;
 }
+
 .contenido-centrado {
     max-width: 80rem;
 }
@@ -9,4 +10,8 @@
 .alinear-derecha {
     display: flex;
     justify-content: flex-end;
+}
+
+.w-100 {
+    width: 100%;
 }
